src/main.css
* {
  box-sizing: border-box;

  text-rendering: optimizeLegibility;
  -webkit-text-size-adjust: 100%;
      -ms-text-size-adjust: 100%;
}

body {
  font-family: 'Lato', sans-serif;
  font-size: 1.1em;
  font-weight: 300;

  margin: 0;
  padding: 0;

  color: #2a2a2a;
}

.app {
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
          flex-direction: column;

  min-height: 100vh;

  -webkit-flex-direction: column;
      -ms-flex-direction: column;
}

/* Header */

.header {
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;

  height: 50px;
  padding: 0 12px 0 30px;

  color: #fff;
  background-color: #006400;

  -webkit-align-items: center;
          align-items: center;
  -ms-flex-align: center;
}

.header-brand {
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;

  text-decoration: none;

  -webkit-align-items: center;
          align-items: center;
  -ms-flex-align: center;
}

.header-brand > img {
  height: 35px;
}

.header-logo {
  -webkit-transition: color 0.2s;
          transition: color 0.2s;

  color: #fff;
}

.header-links {
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
          flex: 4;

  height: 100%;
  margin: 0;
  padding: 0;

  list-style: none;

  -webkit-align-items: center;
          align-items: center;
  -webkit-flex: 4;
  -ms-flex-align: center;
  -ms-flexbox: 4;
  -webkit-justify-content: flex-end;
      -ms-justify-content: flex-end;
          justify-content: flex-end;
}

.header-links > li > a {
  font-size: 20px;
  font-weight: 700;

  display: flex;

  height: inherit;
  padding: 15px;

  cursor: pointer;
  text-decoration: none;

  color: #eee;

  align-items: center;
}
@media (max-width: 768px) {
  .header-links > li {
    visibility: hidden;
  }
}

.header-links > li > a {
  font-size: 1.25em;
  font-weight: 700;

  text-decoration: none;

  color: inherit;
}

/* Main Section */

.main {
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
          flex-direction: row;
          flex: 1;

  margin-top: 2em;

  -webkit-flex: 1;
  -webkit-flex-direction: row;
      -ms-flex-direction: row;
  -ms-flexbox: 1;
}

.main-title {
  font-size: 2.2em;

  margin-top: 1.5em;

  text-align: center;
}

.main-desc {
  font-size: 1.3em;
  font-weight: 300;

  margin: 0;
  margin-bottom: 50px;

  text-align: center;

  color: #333;
}

.testimonals-container {
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;

  margin: 0 auto;

  -webkit-flex-wrap: wrap;
      -ms-flex-wrap: wrap;
          flex-wrap: wrap;
  -webkit-justify-content: center;
      -ms-justify-content: center;
          justify-content: center;
}

.testimonal {
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
          flex-direction: column;

  width: 18em;
  height: 26em;
  margin: 2em 1em;

  -webkit-align-items: flex-start;
          align-items: flex-start;
  -ms-flex-align: flex-start;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
  -webkit-justify-content: space-between;
      -ms-justify-content: space-between;
          justify-content: space-between;
}


.testimonal > p {
  line-height: 1.4;

  margin: 1em 0 0;
}

.testimonal > img {
  display: block;

  width: 196px;
  margin: 0 auto;

  border-radius: 50%;
}

.as-seen-on {
  width: 60em;
  margin: 1em auto;
  padding: 1em 0 1em;

  text-align: center;
}

.as-seen-on > img {
  display: block;

  width: 100%;
}

.as-seen-on-desc {
  font-size: 1.5em;
}

.break {
  width: 60em;
  height: 1px;

  border: 0;
  background-color: #e0e0e0;
}

/* Search Bar */

.search-bar {
  line-height: 40px;

  display: flex;
  flex-direction: row;

  align-items: center;
  flex-wrap: wrap;
  justify-content: center;
}

.search-input {
  font-size: 1.2em;

  width: 30em;
  max-width: 80%;
  margin-right: 10px;
  margin-bottom: 10px;
  padding: 0.5em;

  -webkit-transition: all 0.2s;
          transition: all 0.2s;
  letter-spacing: 0.04em;

  color: inherit;
  border: 1px solid #939393;
  outline: none;
  -webkit-box-shadow: inset 0 1px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: inset 0 1px rgba(0, 0, 0, 0.1);
          box-shadow: inset 0 1px rgba(0, 0, 0, 0.1);
}

.search-input:focus {
  border-color: #006400;
  -webkit-box-shadow: 0 0 2px rgba(2, 184, 117, 0.4);
     -moz-box-shadow: 0 0 2px rgba(2, 184, 117, 0.4);
          box-shadow: 0 0 2px rgba(2, 184, 117, 0.4);
}

.content-center {
          flex: 1;

  -webkit-flex: 1;
  -ms-flexbox: 1;
}

.content-container {
  width: 100%;

  /*background-color: #e0e0e0;*/
}

/* Tab Nav */

.list-top {
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;

  margin: 0;
  padding: 0;

  list-style: none;

  -webkit-align-items: center;
          align-items: center;
  -ms-flex-align: center;
  -webkit-justify-content: center;
      -ms-justify-content: center;
          justify-content: center;
}

.list-top > li {
  font-size: 1.2em;

          flex: 0;

  margin: 0 0.5em;
  padding: 0.75em 2em;

  cursor: pointer;
  -webkit-transition: background-color 0.1s linear;
          transition: background-color 0.1s linear;

  -webkit-flex: 0;
  -ms-flexbox: 0;
}

.list-top > li:first-child {
  background-color: #e0e0e0;
}

.list-top > li:hover {
  background-color: #e0e0e0;
}

/* Card Box */

.card-container {
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;

  max-width: 72em;
  margin: 0 auto;
  padding: 3em 0;

  -webkit-flex-wrap: wrap;
      -ms-flex-wrap: wrap;
          flex-wrap: wrap;
  -webkit-justify-content: center;
      -ms-justify-content: center;
          justify-content: center;
}

/* Card */

.card {
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
          flex-direction: column;

  width: 20em;
  margin: 0 1em 2em;

  text-align: center;

  border-radius: 2px;
  background-color: #fff;
  box-shadow: 0 3px 5px 0 rgba(0,0,0,0.14),
  /*       */ 0 0px 10px 0 rgba(0,0,0,0.12),
  /*       */ 0 1px 4px -1px rgba(0,0,0,0.2);

  -webkit-flex-direction: column;
      -ms-flex-direction: column;
}

.card-content {
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
          flex-direction: column;
          flex: 1;

  padding: 1em 2em;

  -webkit-flex: 1;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
  -ms-flex-pack: justify;
  -ms-flexbox: 1;
  -webkit-justify-content: space-between;
          justify-content: space-between;
}

.project-title {
  font-size: 1.8em;

  margin: 0.5em 0;

  -webkit-transition: color 0.2s linear;
          transition: color 0.2s linear;
}

.icon-frame {
  width: 7em;
  height: 7em;
  margin: 0 auto;

  -webkit-transition: color 0.2s linear;
          transition: color 0.2s linear;

  border-radius: 50%;
  background-color: #e0e0e0;
}

.icon-frame > i {
  line-height: 1.7em;
}

.project-link {
  font-weight: 600;

  -webkit-transition: color 0.2s linear;
          transition: color 0.2s linear;
  text-decoration: none;
  /*color: inherit;*/

  color: #006400;
}

.project-link > h3 {
  margin: 1em 0 0;
}

.project-link:hover .project-title {
  color: #006400;
}

.project-tags {
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;

  padding: 1em;

  -webkit-align-items: center;
          align-items: center;
  -ms-flex-align: center;
  flex-wrap: wrap;
  -webkit-justify-content: flex-start;
      -ms-justify-content: flex-start;
          justify-content: flex-start;
}

.project-tags > p {
  font-size: 14px;
  line-height: 1.4;

  margin: 0.2em 0.23em;
  padding: 0.3em 0.5em;

  border-radius: 3px;
  background-color: #e0e0e0;
}

.demo-link {
  font-size: 1.1em;
  font-weight: 600;

  width: 100%;
  margin-top: 1em;
  padding: 0.75em 0;

  cursor: pointer;
  -webkit-transition: border-color 0.2s linear;
          transition: border-color 0.2s linear;
  text-decoration: none;

  color: #006400;
  border: 2px solid #e0e0e0;
  border-radius: 4px;
  background-color: #fff;
}

.demo-link:hover {
  border-color: #006400;
}

.project-status {
  position: relative;
  top: 1em;
  right: 1em;

  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;

  -webkit-align-items: flex-end;
          align-items: flex-end;
  -ms-flex-align: flex-end;
  -webkit-justify-content: flex-end;
      -ms-justify-content: flex-end;
          justify-content: flex-end;
}

.project-status > p,
.project-status > i {
  margin: 0 0 0 0.5em;

  color: #006400;
}

.signup-input {
  font-size: 1.1em;

  width: 100%;
  margin: 1em auto;
  padding: 0.75em;

  -webkit-transition: all 0.2s;
          transition: all 0.2s;
  letter-spacing: 0.04em;

  color: inherit;
  border: 2px solid #e0e0e0;
  border-radius: 4px;
  outline: none;
  -webkit-box-shadow: inset 1px 2px rgba(0, 0, 0, 0.05);
     -moz-box-shadow: inset 1px 2px rgba(0, 0, 0, 0.05);
          box-shadow: inset 1px 2px rgba(0, 0, 0, 0.05);
}

.signup-input:focus {
  border-color: #006400;
  -webkit-box-shadow: 0 0 2px rgba(2, 184, 117, 0.4);
     -moz-box-shadow: 0 0 2px rgba(2, 184, 117, 0.4);
          box-shadow: 0 0 2px rgba(2, 184, 117, 0.4);
}

::-webkit-input-placeholder {
  font-weight: 300;

  letter-spacing: normal;

  color: #adadad;
}

::-moz-placeholder {
  font-weight: 300;

  letter-spacing: normal;

  color: #adadad;
}

:-ms-input-placeholder {
  font-weight: 300;

  letter-spacing: normal;

  color: #adadad;
}

/* Media Queries */

@media screen and (max-width: 64em) {
  .list-top {
    margin-left: 4em;

    -webkit-justify-content: flex-start;
        -ms-justify-content: flex-start;
            justify-content: flex-start;
  }
}

@media screen and (max-width: 70em) {
  .testimonals > div {
    margin-bottom: 0;
  }
  .break {
    width: calc(100% - 4em);
  }
  .as-seen-on {
    width: calc(100% - 4em);
  }
}

